# InventoryForecasting

./: EDA.py  Inventory_optimization_rolling_mean_xgb.py  dummy_data.py  dummy_sales_data.csv  exponentialSmoonthing.py  exponentialSmoothingCV.py  features.py  gitignore  inventory_optimization_xgb.py  load_data.py  main.py  note  pyproject.toml  requirements.txt  sarima.py
