[tool.poetry]
name = "inventoryforecasting"
version = "0.1.0"
description = "[]"
authors = ["Ivanxie"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scipy = "^1.14.1"
numpy = "^2.1.1"
plotly = "^5.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
