[tool.poetry]
name = "inventoryforecasting"
version = "0.1.0"
description = "[]"
authors = ["Ivanxie"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
statsmodels = "^0.14.3"
xgboost = "^2.1.1"
scikit-learn = "^1.5.2"
prophet = "^1.1.5"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scipy = "^1.14.1"
numpy = "^2.1.1"
plotly = "^5.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
